# yt-dlp-AudioNormalize

./: .gitignore  .mega-linter.yml  CHANGELOG.md  README.md  lefthook.yml  pyproject.toml  pyrightconfig.json  ruff.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  publish.yml
tests/: conftest.py  test_audio_normalize.py
typings/ffmpeg_normalize/: __init__.pyi
yt_dlp_plugins/postprocessor/: audio_normalize.py
